--- a/main.css
+++ b/main.css
@@ -95,27 +95,15 @@ body {
   border-radius: 0;
 }
 
-.form-control-dark {
-  color: #fff;
-  background-color: rgba(255, 255, 255, .1);
-  border-color: rgba(255, 255, 255, .1);
-}
-
-.form-control-dark:focus {
-  border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
-}
-
 .clr {clear:both;}
 .wrapper {width:100%;margin:0;padding:0;}
 #body-shad-l {background: 0 0 repeat-y;padding:0;}
 #body-shad-r {background: 100% 0 repeat-y;padding:0;}
-#mainbody {background:#fff;margin:0;padding:0;}
-.mybody{width:50%;}
+#mainbody {background:gray;margin:0;padding:0;}
 .pathway-wrap {margin:0;padding:10px;}
 .tborder {border:1px solid #e2e2e2;padding:0;}
 .catbg,tr.catbg td,.catbg3,tr.catbg3 td,.catbg2,tr.catbg2 td {color:#fff;padding-left:10px;padding-right:10px;background:#990000;}
-.bordercolor {background-color:#999;padding:0;border:1px solid #e2e2e2;}
+.bordercolor {background-color:#fff;padding:0;border:1px solid #e2e2e2;}
 .windowbg2 {background:#fff;}
 .post,.personalmessage {width:100%;overflow:auto;line-height:1.3em;}
 .quote {background-color:#eaeff3;color:#333;text-decoration:none;font-style:normal;font-weight:none;font-size:11px;line-height:1.2em;border: 1px dashed #404040;overflow:auto;max-height:24em;margin:5px auto 10px;padding:5px;}
